<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_newUser"
                    android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|right"
                    android:text="@string/select_role"/>

                <Spinner
                    android:id="@+id/spinner_selectRole"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|right"
                    android:text="@string/phoneNumber" />

                <EditText
                    android:id="@+id/editText_phoneNumber"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <Button
                    android:id="@+id/button_getCode"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/getCode"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/code" />

                <EditText
                    android:id="@+id/editText_inputCode"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|right"
                    android:text="@string/location" />

                <EditText
                    android:id="@+id/editText_inputLocation"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <Button
                    android:id="@+id/button_getLocation"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/getLocation"
                    android:layout_gravity="center_vertical"
                    android:textSize="12dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|right"
                    android:layout_weight="1"
                    android:text="@string/login_password" />

                <EditText
                    android:id="@+id/editText_inputPwd"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|right"
                    android:layout_weight="1"
                    android:text="@string/confirm_passsword" />

                <EditText
                    android:id="@+id/editText_inputConfirmPwd"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="取消" />

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="注册" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>