<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@mipmap/logo"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:text="@string/project_info1"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <LinearLayout
        style="@style/common_horizontal_division_line_style"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
    />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/prompt_userno"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/userno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_shape"
                android:imeActionLabel="确定"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="8dp"
                android:textColor="@color/black"
                android:selectAllOnFocus="false"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingLeft="33dp"
                android:text="@string/prompt_password"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_shape"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="8dp"
                android:textColor="@color/black"
                android:text="" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="记住密码"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/signin_button"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/grass"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="normal" />

            <!--<Button-->
            <!--android:id="@+id/button_register_newUser"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="42dp"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/button_selector_green"-->
            <!--android:text="@string/action_register"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="20dp"-->
            <!--android:textStyle="normal" />-->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/common_horizontal_division_line_style"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/appversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray"
        android:textSize="16sp" />


</LinearLayout>